tests/NormalTests/paczka1/fuzzy1/10945070.err
Error in line 21: cerH0Qy8HN A602 45,7
Error in line 23: cerH0Qy8HN S207 16,5
Error in line 38: cerH0Qy8HN A663 14,3
